# music-guessing-game

./: .gitignore  readme.md
MasbotJSONWriter/: &disable_polymer=1.txt  game_exp.txt  main.py
masbot/: Cargo.toml  CargoMy.toml  tracks.json
masbot/src/: main.rs  mainmy.rs  somethingthatworks.rs
