[package]
name = "masbot"
version = "0.1.0"
authors = ["Maspenguin <maspenguin@gmail.com>"]
edition = "2018"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["builder", "client", "gateway", "http", "cache", "model", "utils", "voice", "rustls_backend"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "current"


[dependencies]
serde = "1.0.104"
serde_json = "1.0"
rand = "0.7"
tokio = { version = "1.0", features = ["macros","rt-multi-thread"] }
futures = "0.3"
async-std = "1.7.0"